Example BaelorSwift cli tool

--- a/examples/Didact.Bae/project.json
+++ b/examples/Didact.Bae/project.json
@@ -6,7 +6,8 @@
 	},
 	
 	"dependencies": {
-		"Didact": "1.0.0-beta1-*"
+		"Didact": "1.0.0-beta1-*",
+		"BaelorNet": "2.0.1"
 	},
 
 	"frameworks": {
